--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!-- Section about me -->
             <div class="Section-about-me">
                 
-                <h2 class="about-me-proffesion">IT Dreamer</h2>
+                <h2 class="about-me-proffesion">IT Junior</h2>
                 <h1 class="about-me-name">Yevhen Vasiuk</h1>
                 
                 <p class="about-me-description">I have a high degree of self-organization, concentrating on the task set and perform it in the designated time.</p>
